tests/compile-fail/integration__integration__type_check__untyped_vars.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: variable requires a type prefix
   ┌─ <input>:11:13
   │
11 │         var untyped_local = 2;
   │             ^^^^^^^^^^^^^ needs a '$' or '%' prefix
   │
   = consider adding an explicit type to its declaration

error: variable requires a type prefix
   ┌─ <input>:12:14
   │
12 │         I0 = RAND_RANGE;
   │              ^^^^^^^^^^ needs a '$' or '%' prefix

error: variable requires a type prefix
   ┌─ <input>:13:14
   │
13 │         I1 = GVAR_WITH_NO_TYPE;
   │              ^^^^^^^^^^^^^^^^^ needs a '$' or '%' prefix
   │
   = consider adding 42069 to !gvar_types in your mapfile


